--- a/components/editor/index.css
+++ b/components/editor/index.css
@@ -328,6 +328,7 @@ pre::-webkit-scrollbar-thumb {
 
 .toolbar {
   display: flex;
+  flex-wrap: wrap;
   margin-bottom: 1px;
   background: #fff;
   padding: 4px;
